tests/baselines/reference/typeOfOperator1.errors.txt
tests/cases/compiler/typeOfOperator1.ts(3,5): error TS2322: Type:
"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"

is not assignable to type:
number

  Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/typeOfOperator1.ts (1 errors) ====
    var x = 1;
    var y: string = typeof x;
    var z: number = typeof x;
        ~
!!! error TS2322: Type:
!!! error TS2322: "string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"
!!! error TS2322: is not assignable to type:
!!! error TS2322: number
!!! error TS2322:   Type 'string' is not assignable to type 'number'.